--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Adventure Biofeedback
+description: We are designing a voice-activated choose-your-own-adventure experience for children with Cerebral Palsy to improve speech therapy outcomes.
+show_downloads:"false"
