--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme:jekyll-theme-minimal
-title:Adventure Biofeedback
-show_downloads:false
+theme: jekyll-theme-minimal
+title: "Adventure Biofeedback"
+show_downloads: "false"
