--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-minimal
 title: "Adventure Biofeedback"
-show_downloads: "false"
+show_downloads: false
+github:
+  is_project_page: false
